<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/screen_margin"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/screen_margin">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="@dimen/screen_margin"
                            android:text="@string/login"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_24" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUserName"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_large"
                            android:background="@drawable/rect_border_black"
                            android:drawableStart="@drawable/ic_baseline_phone_android_24"
                            android:drawablePadding="@dimen/size_of_value_ten"
                            android:hint="@string/mobile_email"
                            android:imeOptions="actionNext"
                            android:inputType="text" />


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPassword"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rect_border_black"
                                android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
                                android:drawablePadding="@dimen/size_of_value_ten"
                                android:layout_marginTop="@dimen/margin_large"
                                android:hint="@string/password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvForgotPassword"
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/size_of_value_fifteen"
                            android:text="@string/forgot_password"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_size_of_value_fourteen" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvChangePassword"
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/size_of_value_fifteen"
                            android:text="Change Password"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_size_of_value_fourteen" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLogin"
                            android:layout_gravity="center"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            app:backgroundTint="@color/colorPrimary"
                            android:layout_marginTop="@dimen/screen_margin"
                            android:text="@string/login" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="@dimen/screen_margin"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvNewtoWoodMart"
                            style="@style/SecondaryText.Large"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/screen_margin"
                            android:layout_weight="2"
                            android:text="@string/new_user_sign_up_here" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSignUp"
                            style="@style/SecondaryText.Large"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/screen_margin"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/sign_up" />
                        </LinearLayout>
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

