<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/screen_margin"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/rect_border_black"
                        android:padding="@dimen/screen_margin">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="12dp"
                            android:textColor="@color/black"
                            android:text="@string/reset_password"
                            android:textSize="@dimen/text_size_24" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="Enter your OTP and Password"
                            android:textSize="16dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="5dp"
                            android:text="OTP"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etOtp"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_large"
                            android:background="@drawable/rect_border_black"
                            android:drawablePadding="@dimen/size_of_value_ten"
                            android:hint="@string/enter_otp"
                            android:imeOptions="actionNext"
                            android:inputType="text" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SecondaryText.Large.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="5dp"
                            android:text="New Password"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etNewPassword"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rect_border_black"
                                android:drawablePadding="@dimen/size_of_value_ten"
                                android:hint="@string/enter_password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword" />


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLogin"
                            android:layout_gravity="center"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            app:backgroundTint="@color/colorPrimary"
                            android:layout_marginTop="@dimen/screen_margin"
                            android:text="@string/verify" />


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

